mobile responsiveness fixes
- hide social share buttons on mobile (for now, so that they don't
  overlap the menu.) As part of this, deleted a duplicate css rule
- for nav buttons on home and playbook, stack them with padding
- in playbook, stack image/title on top of text
- in faq, use one column for questions

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -32,10 +32,3 @@ hr {
   margin: 20px auto;
   width: 200px;
 }
-
-.social-media-share {
-  position: absolute;
-  display: inline-block;
-  right: 30px;
-  top: 22px;
-}
