--- a/_sass/_faq.scss
+++ b/_sass/_faq.scss
@@ -7,7 +7,7 @@
     margin: 40px 0 10px;
     position: relative;
     list-style-type: none;
-    
+
     li {
       margin-bottom: 25px;
       padding-right: 5%;
@@ -19,7 +19,19 @@
       width: 49%;
       display: inline-block;
       vertical-align: top;
+
+      @include media-query($on-palm) {
+        width: 100%;
+        display: block;
+      }
     }
+
+    &.right-column {
+      @include media-query($on-palm) {
+        margin-top: 0px;
+      }
+    }
+    
   }
 }
 
