--- a/_sass/_playbook.scss
+++ b/_sass/_playbook.scss
@@ -4,6 +4,10 @@
   width: 900px;
   margin-top: 40px;
 
+  @include media-query($on-palm) {
+    width: auto;
+  }
+
   .playbook-image {
     display: table-cell;
     width: 122px;
@@ -32,6 +36,11 @@
       list-style-type: none;
       margin-left: 0;
       color: #949494;
+
+      @include media-query($on-palm) {
+        margin-left: -122px; /* image width */
+        margin-top: 20px;
+      }
 
       strong { 
         color: black; 
@@ -109,6 +118,14 @@ hr {
 .playbook-item.no-image {
   width: 790px;
   margin-top: 20px;
+
+  @include media-query($on-palm) {
+    width: auto;
+
+    .playbook-text ul {
+      margin-left: 0px; /* image width */
+    }
+  }
 }
 
 .playbook-text h2 {
@@ -135,6 +152,14 @@ hr {
     border-radius: 3px;
     margin-right: 18px;
     padding: 10px 18px;
+
+    @include media-query($on-palm) {
+      display: block;
+      width: 50%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 18px;
+    }
   }
 
   a.nav-element:hover {
